--- a/index.html
+++ b/index.html
@@ -286,17 +286,15 @@
             </div>
         </div>
         <div class="info-tile-row">
-            <div class="info-tile half" style="display: flex; align-items: start;">
-                <div class="shadow" style="width: 90%; height: 500px; left: -200px; top: -400px;"></div>
-                <div style="width: 100%; height: fit-content; display: flex; flex-direction: row; align-items: start;">
-                    <div style="width: 100%; height: fit-content; float: left; z-index: 100;">
-                        <h1 style="float: left; margin: 0;">Mapa Świata</h1>
-                        <p style="float: left; margin: 0; color: rgba(255, 255, 255, 0.75);">Poznaj zakątki świata Fangei</p>
-                    </div>
-                    <div style="width: fit-content; height: fit-content; float: left;">
-                        <a style="float: right;" href="https://grumqy.github.io/fangea/mapa/" class="button-href map"><i class="fa-solid fa-map-location-dot"></i>Wyświetl Mapę</a>
-                    </div>
+            <div class="info-tile half" style="display: flex; align-items: center;">
+                <div class="shadow" style="width: 90%; height: 500px; right: -200px; top: -400px;"></div>
+                <div style="width: 100%; height: fit-content;">
+                <div style="background-image: url(https://i.ibb.co/LY5j2qZ/radia.png); background-size: cover; background-position-x: left; background-position-y: top; background-repeat: no-repeat; width: 33%; height: 90%; border-top-left-radius: 1rem; position: absolute; top: 10%; right: 0; opacity: 0.75; z-index: -1;"></div>
+                    <h1 style="text-align: left; margin: 0;">Stacje Radiowe</h1>
+                    <p style="text-align: left; margin-top: 0.5rem; color: rgba(255, 255, 255, 0.75);">Słuchaj muzyki z całego świata</p>
+                    <a style="float: left;" href="discord.html" class="button-href radio"><i class="fa-solid fa-radio"></i>Posłuchaj Radia</a>
                 </div>
+            </div>
                 <div style="background-image: url(https://i.ibb.co/ZVTLQCQ/obraz-2024-06-01-193351213.png); background-size: cover; background-position-x: right; background-position-y: top; background-repeat: no-repeat; width: 65%; height: 100%; border-top-left-radius: 2rem; position: absolute; bottom: -35%; right: 0; opacity: 0.75; z-index: -1;"></div>
             </div>
             <div class="info-tile half" style="display: flex; align-items: center;">
