--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                 <div style="background-image: url(https://i.ibb.co/LY5j2qZ/radia.png); background-size: cover; background-position-x: left; background-position-y: top; background-repeat: no-repeat; width: 33%; height: 90%; border-top-left-radius: 1rem; position: absolute; top: 10%; right: 0; opacity: 0.75; z-index: -1;"></div>
                     <h1 style="text-align: left; margin: 0;">Stacje Radiowe</h1>
                     <p style="text-align: left; margin-top: 0.5rem; color: rgba(255, 255, 255, 0.75);">Słuchaj muzyki z całego świata</p>
-                    <a style="float: left;" href="discord.html" class="button-href radio"><i class="fa-solid fa-radio"></i>Posłuchaj Radia</a>
+                    <a style="float: left;" href="https://grumqy.github.io/fangea/radio/" class="button-href radio"><i class="fa-solid fa-radio"></i>Posłuchaj Radia</a>
                 </div>
             </div>
                 <div style="background-image: url(https://i.ibb.co/ZVTLQCQ/obraz-2024-06-01-193351213.png); background-size: cover; background-position-x: right; background-position-y: top; background-repeat: no-repeat; width: 65%; height: 100%; border-top-left-radius: 2rem; position: absolute; bottom: -35%; right: 0; opacity: 0.75; z-index: -1;"></div>
