--- a/radio/index.html
+++ b/radio/index.html
@@ -6,6 +6,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stacje Radiowe - Fangea i inne kontynenty</title>
+    <meta property="og:title" content="Radio">
+    <meta name="twitter:title" content="Radio">
+    <meta name="description" content="Słuchaj muzyki z całego świata.">
+    <meta property="og:description" content="Słuchaj muzyki z całego świata.">
+    <meta name="twitter:description" content="Słuchaj muzyki z całego świata.">
+    <meta property="og:image" content="https://i.ibb.co/84CqrhX/obraz-2024-06-10-181542049.png">
+    <meta name="twitter:image" content="https://i.ibb.co/84CqrhX/obraz-2024-06-10-181542049.png">
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
