--- a/radio/index.html
+++ b/radio/index.html
@@ -11,8 +11,8 @@
     <meta name="description" content="Słuchaj muzyki z całego świata.">
     <meta property="og:description" content="Słuchaj muzyki z całego świata.">
     <meta name="twitter:description" content="Słuchaj muzyki z całego świata.">
-    <meta property="og:image" content="https://i.ibb.co/84CqrhX/obraz-2024-06-10-181542049.png">
-    <meta name="twitter:image" content="https://i.ibb.co/84CqrhX/obraz-2024-06-10-181542049.png">
+    <meta property="og:image" content="https://i.ibb.co/LY5j2qZ/radia.png">
+    <meta name="twitter:image" content="https://i.ibb.co/LY5j2qZ/radia.png">
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
