--- a/radio/index.html
+++ b/radio/index.html
@@ -148,6 +148,12 @@
         main #radio-list ul a.genre_rock{
            display: contents; 
         }
+        main #radio-list ul a.genre_altrock{
+           display: contents; 
+        }
+        main #radio-list ul a.genre_indierock{
+           display: contents; 
+        }
         main #radio-list ul a.genre_metal{
            display: contents; 
         }
@@ -282,6 +288,12 @@
         }
         main #radio-list ul a.genre_rock{
             display: contents; 
+        }
+        main #radio-list ul a.genre_altrock{
+           display: contents; 
+        }
+        main #radio-list ul a.genre_indierock{
+           display: contents; 
         }
         main #radio-list ul a.genre_metal{
             display: contents; 
@@ -422,7 +434,7 @@
     <div>Filtruj wg gatunku</div>
     <ul>
         <form>
-        <input type="checkbox" id="genre_all" class="checkbox_select_all" data-categories="genre_pop;genre_citypop;genre_electro;genre_hiphop;genre_breakbeat;genre_breakcore;genre_randb;genre_lofi;genre_phonk;genre_opera;genre_country;genre_swing;genre_disco;genre_rock;genre_metal;genre_info" checked>
+        <input type="checkbox" id="genre_all" class="checkbox_select_all" data-categories="genre_pop;genre_citypop;genre_electro;genre_hiphop;genre_breakbeat;genre_breakcore;genre_randb;genre_lofi;genre_phonk;genre_opera;genre_country;genre_swing;genre_disco;genre_rock;genre_altrock;genre_indierock;genre_metal;genre_info" checked>
         <input type="checkbox" id="genre_pop" checked>
         <input type="checkbox" id="genre_citypop" checked>
         <input type="checkbox" id="genre_electro" checked>
@@ -437,6 +449,8 @@
         <input type="checkbox" id="genre_swing" checked>
         <input type="checkbox" id="genre_disco" checked>
         <input type="checkbox" id="genre_rock" checked>
+        <input type="checkbox" id="genre_altrock" checked>
+        <input type="checkbox" id="genre_indierock" checked>
         <input type="checkbox" id="genre_metal" checked>
         <input type="checkbox" id="genre_info" checked>
         </form>
@@ -485,6 +499,12 @@
         <label for="genre_rock" class="active">
             <li>Rock</li>
         </label>
+        <label for="genre_altrock" class="active">
+            <li>Rock Alternatywny</li>
+        </label>
+        <label for="genre_altrock" class="active">
+            <li>Indie Rock</li>
+        </label>
         <label for="genre_metal" class="active">
             <li>Metal</li>
         </label>
@@ -507,7 +527,12 @@
                         <span>Nox FM</span>
                     </li>  
                 </a>
-
+                <a href="https://www.youtube.com/playlist?list=PLQK-CIQhtz9PB3j0AXHi_-ycr1qO0YKFK" class="lang_en genre_rock genre_altrock genre_indierock loc_stanyzjednoczone">
+                    <li>
+                        <img src="https://i.ibb.co/7C0gJjX/noir-noir.png">
+                        <span>Noir Radio</span>
+                    </li>  
+                </a>
         </ul>
     </div>
     </main>
