--- a/radio/index.html
+++ b/radio/index.html
@@ -502,7 +502,7 @@
         <label for="genre_altrock" class="active">
             <li>Rock Alternatywny</li>
         </label>
-        <label for="genre_altrock" class="active">
+        <label for="genre_indierock" class="active">
             <li>Indie Rock</li>
         </label>
         <label for="genre_metal" class="active">
