--- a/radio/index.html
+++ b/radio/index.html
@@ -533,6 +533,12 @@
                         <span>Noir Radio</span>
                     </li>  
                 </a>
+                <a href="https://www.youtube.com/playlist?list=PLpUj5VNghWeRRRM_V92H4pb0S8rKDKnRc" class="lang_en genre_rock genre_metal loc_zoltostan">
+                    <li>
+                        <img src="https://i.ibb.co/Msm4DjC/werigrad-radio.png">
+                        <span>Werigrad Radio</span>
+                    </li>  
+                </a>
         </ul>
     </div>
     </main>
