--- a/radio/index.html
+++ b/radio/index.html
@@ -539,6 +539,12 @@
                         <span>Werigrad Radio</span>
                     </li>  
                 </a>
+                <a href="https://www.youtube.com/playlist?list=PL8YJXgkG6ZjnX2m1zG0bpOvFX_pW8iQHs" class="lang_pl genre_rock genre_pop loc_pamercja">
+                    <li>
+                        <img src="https://i.ibb.co/ncGF0Hb/boomer-hits.png">
+                        <span>Boomer Hits</span>
+                    </li>  
+                </a>
         </ul>
     </div>
     </main>
