--- a/radio/index.html
+++ b/radio/index.html
@@ -545,6 +545,12 @@
                         <span>Boomer Hits</span>
                     </li>  
                 </a>
+                <a href="https://www.youtube.com/playlist?list=PLJ32iBqIDcZ_W6jL936Vjc7-98x7gflm1" class="lang_se genre_pop loc_montecydia">
+                    <li>
+                        <img src="https://i.ibb.co/dM2dJny/radiokolencydam2.png">
+                        <span>Radio Kolencydam</span>
+                    </li>  
+                </a>
         </ul>
     </div>
     </main>
