--- a/wiki/lemburg/index.html
+++ b/wiki/lemburg/index.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Lemburg - Fangea i inne kontynenty</title>
-<meta property="og:title" content="Tytuł Artykułu">
-<meta name="twitter:title" content="Tytuł Artykułu">
+<meta property="og:title" content="Lemburg">
+<meta name="twitter:title" content="Lemburg">
 <meta name="description" content="Lemburg (gr. Λέμβουργ, IPA: [ˈlɛmburk]), Republika Lemburska (gr. Λεμβουργική Δημοκρατία Lembourgikí Dimokratía, IPA: [lɛm.bur.ˈʝi.ci ði.mo.kɾaˈti.a]) – państwo federacyjne położone na wyspach lemburskich. Jest jednym z nielicznych państw, gdzie powszechnie stosuje się formy bezpośredniej demokracji. Lemburg jest państwem neutralnym. Lemburg ma długą historię i bogate dziedzictwo kulturowe. Uważan">
 <meta property="og:description" content="Lemburg (gr. Λέμβουργ, IPA: [ˈlɛmburk]), Republika Lemburska (gr. Λεμβουργική Δημοκρατία Lembourgikí Dimokratía, IPA: [lɛm.bur.ˈʝi.ci ði.mo.kɾaˈti.a]) – państwo federacyjne położone na wyspach lemburskich. Jest jednym z nielicznych państw, gdzie powszechnie stosuje się formy bezpośredniej demokracji. Lemburg jest państwem neutralnym. Lemburg ma długą historię i bogate dziedzictwo kulturowe. Uważan">
 <meta name="twitter:description" content="Lemburg (gr. Λέμβουργ, IPA: [ˈlɛmburk]), Republika Lemburska (gr. Λεμβουργική Δημοκρατία Lembourgikí Dimokratía, IPA: [lɛm.bur.ˈʝi.ci ði.mo.kɾaˈti.a]) – państwo federacyjne położone na wyspach lemburskich. Jest jednym z nielicznych państw, gdzie powszechnie stosuje się formy bezpośredniej demokracji. Lemburg jest państwem neutralnym. Lemburg ma długą historię i bogate dziedzictwo kulturowe. Uważan">
@@ -28,12 +28,12 @@
 <ul></ul>
 </nav>
 <article>
-<header><div>Lemburg</div><span>02.07.2024</span></header>
-<table class="infobox"><caption>Republika Lemburska</caption><tbody><tr><th style="text-align: center;" colspan="2"> Λεμβουριακή Δημοκρατία</th></tr><tr><th style="text-align: center;" colspan="2"> <i>Lemburiakí Dimokratía</i></th></tr><tr><td colspan="2"><table class="ibox"><tbody><tr><td> <img src="https://i.ibb.co/6ZKVq0q/lemburg.png" data-description="Flaga Republiki Lemburskiej"></td><td><img src="https://i.ibb.co/0nj3FDv/lemburg-godlo.png" data-description="Godło Republiki Lemburskiej"> </td></tr><tr><td style="text-align: center;"> Flaga</td><td style="text-align: center;"> Godło </td></tr></tbody></table></td></tr><tr><td style="text-align: center;" colspan="2"> Dewiza: <i>Παράδοση και Καινοτομία</i><br><i>trb. Parádosi kai Kainotomía</i><br>(<i>Tradycja i Innowacja</i>) </td></tr><tr><td style="text-align: center;" colspan="2"> Hymn: <a href="https://grumqy.github.io/fangea/wiki/hymn_lemburga/"><i>Η Καρδιά της Λεμβουριακής Γης</i></a><br><i>trb. I Kardiá tis Lembouriakís Gis</i><br> (<i>Serce Lemburskiej Ziemi</i>) </td></tr><tr><td style="text-align: center;" colspan="2"> <audio controls=""><source src="https://audio.jukehost.co.uk/lrmQPyFLwfBJpZIqvqf9zjNJibXvQIxQ" type="audio/mpeg"></audio> </td></tr><tr><th>Ustrój polityczny</th><td> republika federalna (system parlamentarno-komitetowy) </td></tr><tr><th>Konstytucja</th><td> <a href="https://grumqy.github.io/fangea/wiki/konstytucja_lemburska/">Konstytucja Lemburska</a> </td></tr><tr><th>Stolica</th><td> <a href="https://grumqy.github.io/fangea/wiki/vounaria/">Vounaria</a> (<i>de facto</i>)<br>brak (<i>de iure</i>) </td></tr><tr><th>Data powstania</th><td> 13 kwietnia 1831 </td></tr><tr><th>Prezydent</th><td> <a href="https://grumqy.github.io/fangea/wiki/nikolas_papadopoulos/">Nikolas Papadopoulos</a> </td></tr><tr><th>Powierzchnia</th><td> 2 011 km² </td></tr><tr><th>Populacja (2024)<br>• liczba ludności<br>• gęstość</th><td> <br>500 000<br>248.63 os./km² </td></tr><tr><th>Waluta</th><td> <a href="https://grumqy.github.io/fangea/wiki/dolar_fangejski/">Dolar Fangejski</a> </td></tr><tr><th>Telefoniczny nr kierunkowy</th><td> +45 </td></tr><tr><th>Domena internetowa</th><td> .lb </td></tr><tr><th>Kod samolotowy</th><td> LB </td></tr><tr><th>Narody i grupy etniczne</th><td> Lemburczycy: 79,3%<br>Iznotiańczycy: 11,2%<br>Sudfangejczycy: 9,5% </td></tr><tr><th>Język urzędowy</th><td> lemburski (nowogrecki) </td></tr><tr><th>Religia dominująca</th><td> prawosławie </td></tr><tr><th>PKB (2024)<br>• całkowite<br>• na osobę</th><td> <br>... UFD<br>... UFD </td></tr><tr><td style="text-align: center;" colspan="2"> <b>Położenie na mapie</b> </td></tr><tr><td style="text-align: center;" colspan="2"> <img src="https://i.ibb.co/hMR9cxz/obraz-2024-06-16-232833053.png" data-description="Położenie na mapie"> </td></tr><tr><td colspan="2" style="border-top: 1px solid #a2a9b1;"><table class="ibox"><tbody><tr class="plainlink"><td><img src="https://i.ibb.co/XJQSsqS/slownik.png"></td><td><span class="modal-opener" id="dictionary-opener">Hasło w słowniku</span></td></tr></tbody></table></td></tr></tbody></table>
+<header><div>Lemburg</div><span>24.12.2024</span></header>
+<table class="infobox"><caption>Republika Lemburska</caption><tbody><tr><th style="text-align: center;" colspan="2"> Λεμβουριακή Δημοκρατία</th></tr><tr><th style="text-align: center;" colspan="2"> <i>Lemburiakí Dimokratía</i></th></tr><tr><td colspan="2"><table class="ibox"><tbody><tr><td> <img src="https://i.ibb.co/6ZKVq0q/lemburg.png" data-description="Flaga Republiki Lemburskiej"></td><td><img src="https://i.ibb.co/1qPKTzG/godlo-lemburg.png" data-description="Godło Republiki Lemburskiej"> </td></tr><tr><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/flaga_lemburga/">Flaga</a></td><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/godło_lemburga/">Godło</a> </td></tr></tbody></table></td></tr><tr><td style="text-align: center;" colspan="2"> Dewiza: <i>Παράδοση και Καινοτομία</i><br><i>trb. Parádosi kai Kainotomía</i><br>(<i>Tradycja i Innowacja</i>) </td></tr><tr><td style="text-align: center;" colspan="2"> Hymn: <a href="https://grumqy.github.io/fangea/wiki/hymn_lemburga/"><i>Η Καρδιά της Λεμβουριακής Γης</i></a><br><i>trb. I Kardiá tis Lembouriakís Gis</i><br> (<i>Serce Lemburskiej Ziemi</i>) </td></tr><tr><td style="text-align: center;" colspan="2"> <audio controls=""><source src="https://audio.jukehost.co.uk/lrmQPyFLwfBJpZIqvqf9zjNJibXvQIxQ" type="audio/mpeg"></audio> </td></tr><tr><th>Ustrój polityczny</th><td> republika federalna (system parlamentarno-komitetowy) </td></tr><tr><th>Konstytucja</th><td> <a href="https://grumqy.github.io/fangea/wiki/konstytucja_lemburska/">Konstytucja Lemburska</a> </td></tr><tr><th>Stolica</th><td> <a href="https://grumqy.github.io/fangea/wiki/vounaria/">Vounaria</a> (<i>de facto</i>)<br>brak (<i>de iure</i>) </td></tr><tr><th>Data powstania</th><td> 13 kwietnia 1831 </td></tr><tr><th>Prezydent</th><td> <a href="https://grumqy.github.io/fangea/wiki/nikolas_papadopoulos/">Nikolas Papadopoulos</a> </td></tr><tr><th>Powierzchnia</th><td> ... </td></tr><tr><th>Populacja (2024)<br>• liczba ludności<br>• gęstość</th><td> <br>500 000<br>248.63 os./km² </td></tr><tr><th>Waluta</th><td> <a href="https://grumqy.github.io/fangea/wiki/dolar_fangejski/">Dolar Fangejski</a> </td></tr><tr><th>Telefoniczny nr kierunkowy</th><td> +45 </td></tr><tr><th>Domena internetowa</th><td> .lb </td></tr><tr><th>Kod samolotowy</th><td> LB </td></tr><tr><th>Narody i grupy etniczne</th><td> Lemburczycy: 88,7%<br>Iznotiańczycy: 11,3%</td></tr><tr><th>Język urzędowy</th><td> lemburski (nowogrecki) </td></tr><tr><th>Religia dominująca</th><td> prawosławie </td></tr><tr><th>PKB (2024)<br>• całkowite<br>• na osobę</th><td> <br>... UFD<br>... UFD </td></tr><tr><td style="text-align: center;" colspan="2"> <b>Położenie na mapie</b> </td></tr><tr><td style="text-align: center;" colspan="2"> <img src="https://i.ibb.co/hMR9cxz/obraz-2024-06-16-232833053.png" data-description="Położenie na mapie"> </td></tr></tbody></table>
 
-<p>Lemburg (gr. Λέμβουργ, IPA: [ˈlɛmburk]), Republika Lemburska (gr. Λεμβουργική Δημοκρατία <i>Lembourgikí Dimokratía</i>, IPA: [lɛm.bur.ˈʝi.ci ði.mo.kɾaˈti.a]) – państwo federacyjne położone na wyspach lemburskich. Jest jednym z nielicznych państw, gdzie powszechnie stosuje się formy bezpośredniej demokracji. Lemburg jest państwem neutralnym.</p>
+<p><b>Lemburg</b> (gr. Λέμβουργ, IPA: [ˈlɛmburk]), <b>Republika Lemburska</b> (gr. Λεμβουργική Δημοκρατία <i>Lembourgikí Dimokratía</i>, IPA: [lɛm.bur.ˈʝi.ci ði.mo.kɾaˈti.a]) – państwo federacyjne położone na wyspach lemburskich. Jest jednym z nielicznych państw, gdzie powszechnie stosuje się formy bezpośredniej demokracji. Lemburg jest państwem neutralnym.</p>
 
-<p>Lemburg ma długą historię i bogate dziedzictwo kulturowe. Uważany jest za spadkobiercę starożytnej <a href="https://grumqy.github.io/fangea/wiki/lemuria/">Lemurii</a>. Jako taki, stanowi kolebkę całej cywilizacji fangejskiej, miejsce narodzin demokracji, filozofii, igrzysk olimpijskich, sportu, wielu podstawowych twierdzeń naukowych, zachodniej literatury, historiografii, politologii oraz teatru, zarówno komedii, jak i dramatu. Nowożytne państwo lemburskie zostało utworzone w wyniku zwycięskiego powstania przeciwko <a href="https://grumqy.github.io/fangea/wiki/iznotia/">rządom iznotiańskim</a>.</p>
+<p>Lemburg ma długą historię i bogate dziedzictwo kulturowe. Uważany jest za spadkobiercę starożytnej <a href="https://grumqy.github.io/fangea/wiki/lemuria/">Lemurii</a>. Jako taki, stanowi kolebkę całej cywilizacji, miejsce narodzin demokracji, filozofii, igrzysk olimpijskich, sportu, wielu podstawowych twierdzeń naukowych, zachodniej literatury, historiografii, politologii oraz teatru, zarówno komedii, jak i dramatu. Nowożytne państwo lemburskie zostało utworzone w wyniku zwycięskiego powstania przeciwko <a href="https://grumqy.github.io/fangea/wiki/iznotia/">rządom iznotiańskim</a>.</p>
 
 <p>Lemburg jest państwem wyspiarskim. Dominującą religią w Lemburgu jest protestantyzm (76,4%).</p>
 
@@ -73,63 +73,12 @@
 <li>Filiates</li>
 <li>Xina</li>
 <li>Salamina</li></ul>
-<p>Blisko 73% powierzchni Lemburga zajmują pasma górskie (średnia wysokość 700–1000 m n.p.m.). Obszary nizinne są niewielkie i występują w pobliżu wybrzeży (Niz. Vounariańska, Elejska oraz Wschodnioarmacka).</p>
-
-<h1>Klimat w Lemburgu</h1>
-<p>Lemburg pozostaje pod wpływem klimatu śródziemnomorskiego. Cechuje go łagodna zima z suchym, gorącym latem. W najcieplejszym miesiącu średnia temperatura wynosi ponad 22 °C. Są co najmniej cztery miesiące ze średnią temperaturą ponad 10 °C, w zimie mogą zdarzać się przymrozki. Notuje się co najmniej trzy razy więcej opadów atmosferycznych w najwilgotniejszych miesiącach zimowych w porównaniu z suchym latem.</p>
-
-<p>Regionalnie zróżnicowany klimat można jednak podzielić na dwie strefy: śródziemnomorski – obejmujący południowo-wschodnią część kraju (szczególnie w rejonach ośrodków wypoczynkowych) oraz umiarkowany, występujący w północno-zachodniej części kraju.</p>
-
-<h2>Pory roku w Lemburgu</h2>
-<div class="table-wrapper"><table><tbody><tr><th>Pora roku</th><th>Meteorologiczna</th><th>Astronomiczna</th><th>Odczuwalna</th></tr><tr><th>wiosna</th><td> 1 marca do 31 maja</td><td>21 marca do 20 czerwca</td><td>od marca do maja </td></tr><tr><th>lato</th><td> 1 czerwca do 31 sierpnia</td><td>21 czerwca do 20 września</td><td>od czerwca do sierpnia </td></tr><tr><th>jesień</th><td> 1 września do 30 listopada</td><td>21 września do 20 grudnia</td><td>od września do listopada </td></tr><tr><th>zima</th><td> 1 grudnia do 28 lutego</td><td>21 grudnia do 20 marca</td><td>od grudnia do lutego </td></tr></tbody></table></div>
-
-<h1>Etymologia</h1>
-<p>...</p>
-
-<h1>Historia</h1>
-<p>...</p>
-
-<h1>Ustrój polityczny</h1>
-<p>...</p>
-
-<h1>Siły zbrojne</h1>
-<p>...</p>
-
-<h1>Ustrój polityczny</h1>
-<p>...</p>
-
-<h1>Podział administracyjny</h1>
-<p>...</p>
-
-<h1>Miasta</h1>
-<p>...</p>
-
-<h1>Demografia</h1>
-<p>...</p>
-
-<h1>Zatrudnienie</h1>
-<p>...</p>
-
-<h1>Infrastruktura i transport</h1>
-<p>...</p>
-
-<h1>Oświata i nauka</h1>
-<p>...</p>
-
-<h1>Architektura i sztuki piękne</h1>
-<p>...</p>
-
-<h1>Kultura</h1>
-<p>...</p>
-
-<h1>Święta</h1>
-<p>...</p>
  <div id="source-code" style="display:none;">{|infobox Republika Lemburska
 !t=cc=2 Λεμβουριακή Δημοκρατία !
 !t=cc=2 ''Lemburiakí Dimokratía'' !
 |{ibox
-| [[timg:https://i.ibb.co/6ZKVq0q/lemburg.png|Flaga Republiki Lemburskiej]] || [[timg:https://i.ibb.co/0nj3FDv/lemburg-godlo.png|Godło Republiki Lemburskiej]] |
-|t=c Flaga ||t=c Godło |
+| [[timg:https://i.ibb.co/6ZKVq0q/lemburg.png|Flaga Republiki Lemburskiej]] || [[timg:https://i.ibb.co/1qPKTzG/godlo-lemburg.png|Godło Republiki Lemburskiej]] |
+|t=c (https://grumqy.github.io/fangea/wiki/flaga_lemburga/)[Flaga] ||t=c (https://grumqy.github.io/fangea/wiki/godło_lemburga/)[Godło] |
 }|
 |t=cc=2 Dewiza: ''Παράδοση και Καινοτομία''<br>''trb. Parádosi kai Kainotomía''<br>(''Tradycja i Innowacja'') |
 |t=cc=2 Hymn: (https://grumqy.github.io/fangea/wiki/hymn_lemburga/)[''Η Καρδιά της Λεμβουριακής Γης'']<br>''trb. I Kardiá tis Lembouriakís Gis''<br> (''Serce Lemburskiej Ziemi'') |
@@ -139,13 +88,13 @@
 ! Stolica !| (https://grumqy.github.io/fangea/wiki/vounaria/)[Vounaria] (''de facto'')<br>brak (''de iure'') |
 ! Data powstania !| 13 kwietnia 1831 |
 ! Prezydent !| (https://grumqy.github.io/fangea/wiki/nikolas_papadopoulos/)[Nikolas Papadopoulos] |
-! Powierzchnia !| 2 011 km² |
+! Powierzchnia !| ... |
 ! Populacja (2024)<br>• liczba ludności<br>• gęstość !| <br>500 000<br>248.63 os./km² |
 ! Waluta !| (https://grumqy.github.io/fangea/wiki/dolar_fangejski/)[Dolar Fangejski] |
 ! Telefoniczny nr kierunkowy !| +45 |
 ! Domena internetowa !| .lb |
 ! Kod samolotowy !| LB |
-! Narody i grupy etniczne !| Lemburczycy: 79,3%<br>Iznotiańczycy: 11,2%<br>Sudfangejczycy: 9,5% |
+! Narody i grupy etniczne !| Lemburczycy: 88,7%<br>Iznotiańczycy: 11,3%|
 ! Język urzędowy !| lemburski (nowogrecki) |
 ! Religia dominująca !| prawosławie |
 ! PKB (2024)<br>• całkowite<br>• na osobę !| <br>... UFD<br>... UFD |
@@ -153,9 +102,9 @@
 |t=cc=2 [[timg:https://i.ibb.co/hMR9cxz/obraz-2024-06-16-232833053.png|Położenie na mapie]] |
 |}
 
-Lemburg (gr. Λέμβουργ, IPA: [ˈlɛmburk]), Republika Lemburska (gr. Λεμβουργική Δημοκρατία ''Lembourgikí Dimokratía'', IPA: [lɛm.bur.ˈʝi.ci ði.mo.kɾaˈti.a]) – państwo federacyjne położone na wyspach lemburskich. Jest jednym z nielicznych państw, gdzie powszechnie stosuje się formy bezpośredniej demokracji. Lemburg jest państwem neutralnym.
+'''Lemburg''' (gr. Λέμβουργ, IPA: [ˈlɛmburk]), '''Republika Lemburska''' (gr. Λεμβουργική Δημοκρατία ''Lembourgikí Dimokratía'', IPA: [lɛm.bur.ˈʝi.ci ði.mo.kɾaˈti.a]) – państwo federacyjne położone na wyspach lemburskich. Jest jednym z nielicznych państw, gdzie powszechnie stosuje się formy bezpośredniej demokracji. Lemburg jest państwem neutralnym.
 
-Lemburg ma długą historię i bogate dziedzictwo kulturowe. Uważany jest za spadkobiercę starożytnej (https://grumqy.github.io/fangea/wiki/lemuria/)[Lemurii]. Jako taki, stanowi kolebkę całej cywilizacji fangejskiej, miejsce narodzin demokracji, filozofii, igrzysk olimpijskich, sportu, wielu podstawowych twierdzeń naukowych, zachodniej literatury, historiografii, politologii oraz teatru, zarówno komedii, jak i dramatu. Nowożytne państwo lemburskie zostało utworzone w wyniku zwycięskiego powstania przeciwko (https://grumqy.github.io/fangea/wiki/iznotia/)[rządom iznotiańskim].
+Lemburg ma długą historię i bogate dziedzictwo kulturowe. Uważany jest za spadkobiercę starożytnej (https://grumqy.github.io/fangea/wiki/lemuria/)[Lemurii]. Jako taki, stanowi kolebkę całej cywilizacji, miejsce narodzin demokracji, filozofii, igrzysk olimpijskich, sportu, wielu podstawowych twierdzeń naukowych, zachodniej literatury, historiografii, politologii oraz teatru, zarówno komedii, jak i dramatu. Nowożytne państwo lemburskie zostało utworzone w wyniku zwycięskiego powstania przeciwko (https://grumqy.github.io/fangea/wiki/iznotia/)[rządom iznotiańskim].
 
 Lemburg jest państwem wyspiarskim. Dominującą religią w Lemburgu jest protestantyzm (76,4%).
 
@@ -197,80 +146,7 @@ Wyspy wchodzące w skład Archipelagu Lemburskiego to:
 * Filiates
 * Xina
 * Salamina
-
-Blisko 73% powierzchni Lemburga zajmują pasma górskie (średnia wysokość 700–1000 m n.p.m.). Obszary nizinne są niewielkie i występują w pobliżu wybrzeży (Niz. Vounariańska, Elejska oraz Wschodnioarmacka).
-
-= Klimat w Lemburgu =
-
-Lemburg pozostaje pod wpływem klimatu śródziemnomorskiego. Cechuje go łagodna zima z suchym, gorącym latem. W najcieplejszym miesiącu średnia temperatura wynosi ponad 22 °C. Są co najmniej cztery miesiące ze średnią temperaturą ponad 10 °C, w zimie mogą zdarzać się przymrozki. Notuje się co najmniej trzy razy więcej opadów atmosferycznych w najwilgotniejszych miesiącach zimowych w porównaniu z suchym latem.
-
-Regionalnie zróżnicowany klimat można jednak podzielić na dwie strefy: śródziemnomorski – obejmujący południowo-wschodnią część kraju (szczególnie w rejonach ośrodków wypoczynkowych) oraz umiarkowany, występujący w północno-zachodniej części kraju.
-
-== Pory roku w Lemburgu ==
-
-{|
-! Pora roku !! Meteorologiczna !! Astronomiczna !! Odczuwalna !
-! wiosna !| 1 marca do 31 maja || 21 marca do 20 czerwca || od marca do maja |
-! lato !| 1 czerwca do 31 sierpnia || 21 czerwca do 20 września || od czerwca do sierpnia |
-! jesień !| 1 września do 30 listopada || 21 września do 20 grudnia || od września do listopada |
-! zima !| 1 grudnia do 28 lutego || 21 grudnia do 20 marca || od grudnia do lutego |
-|}
-
-= Etymologia =
-
-...
-
-= Historia =
-
-...
-
-= Ustrój polityczny =
-
-...
-
-= Siły zbrojne =
-
-...
-
-= Ustrój polityczny =
-
-...
-
-= Podział administracyjny =
-
-...
-
-= Miasta =
-
-...
-
-= Demografia =
-
-...
-
-= Zatrudnienie =
-
-...
-
-= Infrastruktura i transport =
-
-...
-
-= Oświata i nauka =
-
-...
-
-= Architektura i sztuki piękne =
-
-...
-
-= Kultura =
-
-...
-
-= Święta =
-
-...</div>
+</div>
 </article>
 </main>
 <script src="/fangea/pageheader.js"></script>
