--- a/wiki/index.html
+++ b/wiki/index.html
@@ -65,9 +65,6 @@
                 <li><a href="https://grumqy.github.io/fangea/wiki/neku/">Neku</a></li>
             </ul> 
             <ul class="article-category">
-                <h1>Miasta</h1>
-            </ul> 
-            <ul class="article-category">
                 <h1>Ideologie</h1>
                 <li><a href="https://grumqy.github.io/fangea/wiki/richteryzm/">Richteryzm</a></li>
             </ul> 
@@ -79,9 +76,6 @@
                 <li><a href="https://grumqy.github.io/fangea/wiki/mmt_transport/">MMT Transport</a></li>
             </ul> 
             <ul class="article-category">
-                <h1>Ugrupowania</h1>
-            </ul>
-            <ul class="article-category">
                 <h1>Konflikty Zbrojne</h1>
                 <li><a href="https://grumqy.github.io/fangea/wiki/powstanie_ekwalijskie/">Powstanie Ekwalijskie</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/wojna_domowa_w_wizgardzie/">Wojna domowa w Wizgardzie</a></li>
@@ -91,8 +85,13 @@
                 <li><a href="https://grumqy.github.io/fangea/wiki/mistrzostwa_fangei_w_piłce_nożnej_2024/">Mistrzostwa Fangei w Piłce Nożnej 2024</a></li>
             </ul>
             <ul class="article-category">
-                <h1>Budynki</h1>
-            </ul>
+                <h1>Flagi</h1>
+                <li><a href="https://grumqy.github.io/fangea/wiki/flaga_lemburga/">Flaga Lemburga</a></li>
+            </ul> 
+            <ul class="article-category">
+                <h1>Godła/Herby</h1>
+                <li><a href="https://grumqy.github.io/fangea/wiki/godło_lemburga/">Godło Lemburga</a></li>
+            </ul> 
             <ul class="article-category">
                 <h1>Brak Kategorii</h1>
                 <li><a href="https://grumqy.github.io/fangea/wiki/pameryjskie_tablice_rejestracyjne/">Pameryjskie tablice rejestracyjne</a></li>
