--- a/wiki/flaga_lemburga/index.html
+++ b/wiki/flaga_lemburga/index.html
@@ -45,7 +45,7 @@
 <div class="table-wrapper"><table><tbody><tr><td style="text-align: center;">  <br> <img src="https://i.ibb.co/Q6FMS07/armathia.png" width="200"> <br>  <br> </td><td style="text-align: center;"> <img src="https://i.ibb.co/VCvvGYL/glaros.png" width="200">  </td></tr><tr><td class="cell-background-color-clear_all"> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4b/FIAV_historical.svg/20px-FIAV_historical.svg.png" class="icon small"> Flaga Królestwa Armathia<br>w latach ...–... </td><td class="cell-background-color-clear_all">  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4b/FIAV_historical.svg/20px-FIAV_historical.svg.png" class="icon small"> Flaga Królestwa Glaros<br>w latach ...–...  </td></tr></tbody></table></div>
 
 <h1>Zobacz też</h1>
-<ul><li><a href="https://grumqy.github.io/fangea/wiki/godło_lemburga/">godło Lemburga</a></li>
+<ul><li><a href="https://grumqy.github.io/fangea/wiki/herb_lemburga/">herb Lemburga</a></li>
 <li><a href="https://grumqy.github.io/fangea/wiki/hymn_lemburga/">hymn Lemburga</a></li></ul>
  <div id="source-code" style="display:none;">{|infobox Flaga Lemburga
 |c=2 [[timg:https://i.ibb.co/6ZKVq0q/lemburg.png|Flaga Lemburga]] |
@@ -76,7 +76,7 @@ Kolory użyte przez Królestwo Glaros reprezentują przywiązanie do wiary prawo
 = Zobacz też =
 
 
-* (https://grumqy.github.io/fangea/wiki/godło_lemburga/)[godło Lemburga]
+* (https://grumqy.github.io/fangea/wiki/herb_lemburga/)[herb Lemburga]
 * (https://grumqy.github.io/fangea/wiki/hymn_lemburga/)[hymn Lemburga]
 </div>
 </article>
