--- a/wiki/herb_lemburga/index.html
+++ b/wiki/herb_lemburga/index.html
@@ -29,7 +29,7 @@
 </nav>
 <article>
 <header><div>Herb Lemburga</div><span>24.12.2024</span></header>
-<table class="infobox"><caption>Herb Lemburga</caption><tbody><tr><td colspan="2"> <img src="https://i.ibb.co/1qPKTzG/godlo-lemburg.png" data-description="Godło Lemburga"> </td></tr><tr><th style="text-align: center;" colspan="2"> Informacje</th></tr><tr><th>W oryginale</th><td> Εθνόσημο της Λεμβουρίας </td></tr><tr><th>Wprowadzona</th><td> 13 kwietnia 1831 </td></tr></tbody></table>
+<table class="infobox"><caption>Herb Lemburga</caption><tbody><tr><td colspan="2"> <img src="https://i.ibb.co/1qPKTzG/godlo-lemburg.png" data-description="Herb Lemburga"> </td></tr><tr><th style="text-align: center;" colspan="2"> Informacje</th></tr><tr><th>W oryginale</th><td> Εθνόσημο της Λεμβουρίας </td></tr><tr><th>Wprowadzona</th><td> 13 kwietnia 1831 </td></tr></tbody></table>
 
 <p><b>Herb Lemburga</b> – godło i symbol Republiki Lemburskiej.</p>
 
@@ -41,7 +41,7 @@
 <ul><li><a href="https://grumqy.github.io/fangea/wiki/flaga_lemburga/">flaga Lemburga</a></li>
 <li><a href="https://grumqy.github.io/fangea/wiki/hymn_lemburga/">hymn Lemburga</a></li></ul>
  <div id="source-code" style="display:none;">{|infobox Herb Lemburga
-|c=2 [[timg:https://i.ibb.co/1qPKTzG/godlo-lemburg.png|Godło Lemburga]] |
+|c=2 [[timg:https://i.ibb.co/1qPKTzG/godlo-lemburg.png|Herb Lemburga]] |
 !t=cc=2 Informacje !
 ! W oryginale !| Εθνόσημο της Λεμβουρίας |
 ! Wprowadzona !| 13 kwietnia 1831 |
