--- a/wiki/index.html
+++ b/wiki/index.html
@@ -89,8 +89,8 @@
                 <li><a href="https://grumqy.github.io/fangea/wiki/flaga_lemburga/">Flaga Lemburga</a></li>
             </ul> 
             <ul class="article-category">
-                <h1>Godła/Herby</h1>
-                <li><a href="https://grumqy.github.io/fangea/wiki/godło_lemburga/">Godło Lemburga</a></li>
+                <h1>Herby</h1>
+                <li><a href="https://grumqy.github.io/fangea/wiki/godło_lemburga/">Herb Lemburga</a></li>
             </ul> 
             <ul class="article-category">
                 <h1>Brak Kategorii</h1>
