--- a/wiki/index.html
+++ b/wiki/index.html
@@ -90,7 +90,7 @@
             </ul> 
             <ul class="article-category">
                 <h1>Herby</h1>
-                <li><a href="https://grumqy.github.io/fangea/wiki/godło_lemburga/">Herb Lemburga</a></li>
+                <li><a href="https://grumqy.github.io/fangea/wiki/herb_lemburga/">Herb Lemburga</a></li>
             </ul> 
             <ul class="article-category">
                 <h1>Brak Kategorii</h1>
