--- a/wiki/historia_flag_fangei/index.html
+++ b/wiki/historia_flag_fangei/index.html
@@ -27,7 +27,7 @@
 <h1>Spis Treści</h1>
 <ul></ul>
 </nav>
-<article>
+<article class="noncanonical">
 <header><div>Historia flag Fangei</div><span>24.12.2024</span></header>
 
 <h1>Nowy Tuhalf</h1>
