--- a/wiki/artykuł_dla_początkujacych_wolontariuszy/index.html
+++ b/wiki/artykuł_dla_początkujacych_wolontariuszy/index.html
@@ -27,7 +27,7 @@
 <h1>Spis Treści</h1>
 <ul></ul>
 </nav>
-<article>
+<article class="noncanonical">
 <header><div>Artykuł dla początkujących wolontariuszy</div><span>07.09.2024</span></header>
 <h1>Wstęp</h1>
 <p>Ta sekcja opisuje zalecenia co do stylu pisania artykułów, zasady panujące w edytorze i opis podstawowych oraz zaawansowanych funkcji. Przy pisaniu artykułów pomoże ci to zacząć przygodę z edytorem.</p>
