--- a/wiki/index.html
+++ b/wiki/index.html
@@ -98,6 +98,11 @@
                 <li><a href="https://grumqy.github.io/fangea/wiki/hierarchia_dróg/">Hierarchia dróg</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/montecydyjski_ład/">Monteverische Ordnung (Montecydyjski Ład)</a></li>
             </ul>
+            <ul class="article-category">
+                <h1>Artykuły niepowiązane z roleplay'em</h1>
+                <li><a href="https://grumqy.github.io/fangea/wiki/artykuł_dla_początkujacych_wolontariuszy/">Artykuł dla początkujacych wolontariuszy</a></li>
+                <li><a href="https://grumqy.github.io/fangea/wiki/historia_flag_fangei/">Historia flag Fangei</a></li>
+            </ul> 
         </div>
     </main>
     <script src="/fangea/pageheader.js"></script>
