--- a/wiki/index.html
+++ b/wiki/index.html
@@ -95,6 +95,7 @@
             <ul class="article-category">
                 <h1>Brak Kategorii</h1>
                 <li><a href="https://grumqy.github.io/fangea/wiki/farnet/">FARNET</a></li>
+                <li><a href="https://grumqy.github.io/fangea/wiki/epsilon_3.1/">Epsilon 3.1</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/pameryjskie_tablice_rejestracyjne/">Pameryjskie tablice rejestracyjne</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/hierarchia_dróg/">Hierarchia dróg</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/montecydyjski_ład/">Monteverische Ordnung (Montecydyjski Ład)</a></li>
