--- a/wiki/index.html
+++ b/wiki/index.html
@@ -70,6 +70,7 @@
             </ul> 
             <ul class="article-category">
                 <h1>Firmy</h1>
+                <li><a href="https://grumqy.github.io/fangea/wiki/doma/">DOMA</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/ergonbud/">Ergonbud</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/greenpay/">Greenpay</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/shot_paste/">Shot Paste</a></li>
