--- a/wiki/doma/index.html
+++ b/wiki/doma/index.html
@@ -30,7 +30,7 @@
 <article>
 <header><div>DOMA</div><span>01.01.2025</span></header>
 <h1>Rozdział</h1>
-<table class="infobox"><caption>DOMA</caption><tbody><tr><td colspan="2"> <img src="https://i.ibb.co/6YHGjm1/doma.png" data-description="Logo"> </td></tr><tr><td colspan="2"> <img src="https://i.ibb.co/D42KLkt/Zrzut-ekranu-2025-01-01-221042.png" data-description="Logo"> </td></tr><tr><td style="text-align: center;" colspan="2"> Sklep sieci DOMA w <a href="https://grumqy.github.io/fangea/wiki/lipławieck/">Lipławiecku</a> </td></tr><tr><th>Państwo</th><td> <img src="https://i.ibb.co/R4vGDHc/KNT.png" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/nowy_tuhalf/">Nowy Tuhalf</a> </td></tr><tr><th>Siedziba</th><td> <a href="https://grumqy.github.io/fangea/wiki/terst/">Terst</a> </td></tr><tr><th>Data założenia</th><td> Wartość </td></tr><tr><th>Prezes</th><td> Aljaž Koren </td></tr></tbody></table>
+<table class="infobox"><caption>DOMA</caption><tbody><tr><td colspan="2"> <img src="https://i.ibb.co/6YHGjm1/doma.png" data-description="Logo"> </td></tr><tr><td colspan="2"> <img src="https://i.ibb.co/D42KLkt/Zrzut-ekranu-2025-01-01-221042.png" data-description="Sklep sieci DOMA w Lipławiecku"> </td></tr><tr><td style="text-align: center;" colspan="2"> Sklep sieci DOMA w <a href="https://grumqy.github.io/fangea/wiki/lipławieck/">Lipławiecku</a> </td></tr><tr><th>Państwo</th><td> <img src="https://i.ibb.co/R4vGDHc/KNT.png" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/nowy_tuhalf/">Nowy Tuhalf</a> </td></tr><tr><th>Siedziba</th><td> <a href="https://grumqy.github.io/fangea/wiki/terst/">Terst</a> </td></tr><tr><th>Data założenia</th><td> Wartość </td></tr><tr><th>Prezes</th><td> Aljaž Koren </td></tr></tbody></table>
 
 <p><b>DOMA</b> (albo <b>Doma</b>) – przedsiębiorstwo z siedzibą w <a href="https://grumqy.github.io/fangea/wiki/nowy_tuhalf/">Nowym Tuhalfie</a>, zajmujące się produkcją oraz sprzedażą mebli, a także artykułów dekoracyjnych, założone przez <a href="https://grumqy.github.io/fangea/wiki/andrej_novak/">Andreja Novaka</a> w 1963 roku w Nowym Tuhalfie. Nazwa podchodzi od słoweńskiego słowa „doma” oznaczającego dosłownie „u siebie w domu”.</p>
 
@@ -56,7 +56,7 @@
 {|infobox DOMA
 |c=2 [[timg:https://i.ibb.co/6YHGjm1/doma.png|Logo]] |
 
-|c=2 [[timg:https://i.ibb.co/D42KLkt/Zrzut-ekranu-2025-01-01-221042.png|Logo]] |
+|c=2 [[timg:https://i.ibb.co/D42KLkt/Zrzut-ekranu-2025-01-01-221042.png|Sklep sieci DOMA w Lipławiecku]] |
 |t=cc=2 Sklep sieci DOMA w (https://grumqy.github.io/fangea/wiki/lipławieck/)[Lipławiecku] |
 ! Państwo !| [[icon:https://i.ibb.co/R4vGDHc/KNT.png|small]] (https://grumqy.github.io/fangea/wiki/nowy_tuhalf/)[Nowy Tuhalf] |
 ! Siedziba !| (https://grumqy.github.io/fangea/wiki/terst/)[Terst] |
@@ -94,4 +94,5 @@ Rok Štern, były bliski współpracownik założyciela, napisał książkę pt.
 <script src="/fangea/article.js"></script>
 
 </body>
+</html>
 </html>
