--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
                 <div class="article-tile-description">Halandia</div>
             </div>
         </a>
-        <a href="https://grumqy.github.io/fangea/wiki/powstanie_ekwalijskie/">
+        <a href="https://grumqy.github.io/fangea/wiki/doma/">
             <div class="article-tile">
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
                 <div class="article-tile-image">
-                    <div class="article-tile-text"><span>Powstanie Ekwalijskie (1879-1882) – Zryw zbrojny mający miejsce w Ekwalii od 16 września 1879 roku do 20 kwietnia 1882 roku. Wojna ta zasłynęła wśród historyków jako jedna z „najbardziej interesujących i najbardziej krwawych” wojen w historii Maurazji. Była to także druga wojna, w której wojsko Stanów Zjednoczonych Fangei używało dynamitu do akcji dywersyjnych na szerszą skale.</span></div>
-                    <img src="https://i.ibb.co/7JHp6Wh/zd.png">
+                    <div class="article-tile-text"><span>DOMA (albo Doma) – przedsiębiorstwo z siedzibą w Nowym Tuhalfie, zajmujące się produkcją oraz sprzedażą mebli, a także artykułów dekoracyjnych, założone przez Andreja Novaka w 1963 roku w Nowym Tuhalfie. Nazwa podchodzi od słoweńskiego słowa „doma” oznaczającego dosłownie „u siebie w domu”.</span></div>
+                    <img src="https://i.ibb.co/D42KLkt/Zrzut-ekranu-2025-01-01-221042.png">
                 </div>
-                <div class="article-tile-description">Powstanie Ekwalijskie</div>
+                <div class="article-tile-description">DOMA</div>
             </div>
         </a>
         <a href="https://grumqy.github.io/fangea/wiki/hierarchia_dróg/">
@@ -227,14 +227,14 @@
                 <div class="article-tile-description">Martylia</div>
             </div>
         </a>
-        <a href="https://grumqy.github.io/fangea/wiki/montecydia/">
+        <a href="https://grumqy.github.io/fangea/wiki/epsilon_3.1/">
             <div class="article-tile">
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
                 <div class="article-tile-image">
-                    <div class="article-tile-text"><span>Montezerisch, Montezerische Eidgenossenschaft, Konfederacja Montecydyjska - państwo federacyjne położone w Fangeii Zachodniej. Jest jednym z niewielu państw, w których obowiązują szeroko stosowane formy demokracji bezpośredniej. Montecydja do Bractwa Narodów przystąpiła dopiero 6 grudnia 2023 po przegłosowaniu tej decyzji w referendum minimalną większością 54% głosów.</span></div>
-                    <img src="https://i.ibb.co/Fhvtg3R/montecydja-flaga.png">
+                    <div class="article-tile-text"><span>Epsilon 3.1 – wydanie systemu operacyjnego Epsilon firmy Helvett, następca systemu Epsilon 3. W lipcu 2011 roku był on zainstalowany na 48% komputerów domowych w Stanach Zjednoczonych, co ustanowiło nowy rekord. Mimo, że początkowo koniec wsparcia systemu miał nadejść 2 stycznia 2020 roku, tak przez oburzenie użytkowników firma Helvett była zmuszona do przedłużania wsparcia aż dwukrotnie.</span></div>
+                    <img src="https://i.ibb.co/719v0HN/hwb.png">
                 </div>
-                <div class="article-tile-description">Montecydia</div>
+                <div class="article-tile-description">Epsilon 3.1</div>
             </div>
         </a>
         <a href="https://grumqy.github.io/fangea/wiki/richteryzm/">
