--- a/wiki/doma/index.html
+++ b/wiki/doma/index.html
@@ -29,7 +29,6 @@
 </nav>
 <article>
 <header><div>DOMA</div><span>01.01.2025</span></header>
-<h1>Rozdział</h1>
 <table class="infobox"><caption>DOMA</caption><tbody><tr><td colspan="2"> <img src="https://i.ibb.co/6YHGjm1/doma.png" data-description="Logo"> </td></tr><tr><td colspan="2"> <img src="https://i.ibb.co/D42KLkt/Zrzut-ekranu-2025-01-01-221042.png" data-description="Sklep sieci DOMA w Lipławiecku"> </td></tr><tr><td style="text-align: center;" colspan="2"> Sklep sieci DOMA w <a href="https://grumqy.github.io/fangea/wiki/lipławieck/">Lipławiecku</a> </td></tr><tr><th>Państwo</th><td> <img src="https://i.ibb.co/R4vGDHc/KNT.png" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/nowy_tuhalf/">Nowy Tuhalf</a> </td></tr><tr><th>Siedziba</th><td> <a href="https://grumqy.github.io/fangea/wiki/terst/">Terst</a> </td></tr><tr><th>Data założenia</th><td> 5 lipca 1963 </td></tr><tr><th>Prezes</th><td> Aljaž Koren </td></tr></tbody></table>
 
 <p><b>DOMA</b> (albo <b>Doma</b>) – przedsiębiorstwo z siedzibą w <a href="https://grumqy.github.io/fangea/wiki/nowy_tuhalf/">Nowym Tuhalfie</a>, zajmujące się produkcją oraz sprzedażą mebli, a także artykułów dekoracyjnych, założone przez <a href="https://grumqy.github.io/fangea/wiki/andrej_novak/">Andreja Novaka</a> w 1963 roku w Nowym Tuhalfie. Nazwa podchodzi od słoweńskiego słowa „doma” oznaczającego dosłownie „u siebie w domu”.</p>
@@ -51,9 +50,7 @@
 <p>Z końcem 2001 roku nowotuhalfska telewizja wyemitowała film o wykorzystywaniu pracy dzieci w zakładach produkujących dla DOMA w Taj-Hoi. Przedsiębiorstwo nie zerwało jednak współpracy z tymi podmiotami. W katalogu produktów z 2003 r. przedsiębiorstwo napisało: „Praca dzieci w dzisiejszych czasach jest nie do zaakceptowania, choć w kilku krajach, gdzie odbywa się nasza produkcja jest rozpowszechniona”.</p>
 
 <p>Rok Štern, były bliski współpracownik założyciela, napisał książkę pt. <i>Resnica o DOMA (Prawda o DOMA)</i>, w której zarzucił Andrejowi Novakowi m.in. pranie brudnych pieniędzy oraz rasizm.</p>
- <div id="source-code" style="display:none;">= Rozdział =
-
-{|infobox DOMA
+ <div id="source-code" style="display:none;">{|infobox DOMA
 |c=2 [[timg:https://i.ibb.co/6YHGjm1/doma.png|Logo]] |
 
 |c=2 [[timg:https://i.ibb.co/D42KLkt/Zrzut-ekranu-2025-01-01-221042.png|Sklep sieci DOMA w Lipławiecku]] |
