--- a/waluty/index.html
+++ b/waluty/index.html
@@ -1,10 +1,10 @@
 !<!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/fangea/local/fangeapage.png" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/fangea/local/fangeapage.png" type="image/png">
     <title>Kalkulator Walut - Fangea i inne kontynenty</title>
     <meta property="og:title" content="Kalkulator Walut">
     <meta name="twitter:title" content="Kalkulator Walut">
