--- a/wiki/cartland/index.html
+++ b/wiki/cartland/index.html
@@ -31,7 +31,7 @@
 <header><div>Cartland</div><span>02.01.2025</span></header>
 <p><b>Cartland</b> to firma zajmująca się sprzedażą detaliczną żywności z siedzibą w Paddbucken. Przedsiębiorstwo prowadzi 1157 placówek i działa w dwudziestu różnych krajach. Cartland jest pełnozakresowym detalistą spożywczym i funkcjonuje jako spółka niezależna.</p>
 <h1>Historia i Działalność</h1>
-<table class="infobox"><caption>Cartland</caption><tbody><tr><td colspan="2"> <img src="https://i.ibb.co/pbvn9zb/cartland-new.png" data-description="Logo"> </td></tr><tr><td colspan="2"><table class="ibox"><tbody></tbody></table></td></tr><tr><th>Państwo</th><td> <img src="https://i.ibb.co/Fhvtg3R/montecydja-flaga.png" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/montecydia/">Montecydia</a></td></tr><tr><th>Kanton</th><td> <img src="https://i.ibb.co/NF6fxZW/lutenbergia-padbuckerlitz.png" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/lutenberg-paddbuckenby/">Lutenberg-Paddbuckenby</a></td></tr><tr><th>Siedziba</th><td> <a href="https://grumqy.github.io/fangea/wiki/paddbucken/">Paddbucken </a></td></tr><tr><th>Udziałowcy</th><td> <a href="https://grumqy.github.io/fangea/wiki/kürzer/">Kürzer</a> </td></tr><tr><th>Data założenia</th><td> 27 sierpnia 1968</td></tr><tr><th>Liczba pracowników</th><td> 125.000 (2024)</td></tr><tr><th>Prezes</th><td> <a href="https://grumqy.github.io/fangea/wiki/kristoffer_ekbom/">Kristoffer Ekbom</a></td></tr></tbody></table>
+<table class="infobox"><caption>Cartland</caption><tbody><tr><td style="text-align: center;" colspan="2"> <img src="https://i.ibb.co/pbvn9zb/cartland-new.png" data-description="Logo"> </td></tr><tr><td colspan="2"> <img src="https://i.ibb.co/8gQm4pJ/Zrzut-ekranu-2025-01-02-110518.png" data-description="Sklep sieci Cartland w Reone"> </td></tr><tr><td style="text-align: center;" colspan="2"> Sklep sieci Cartland w <a href="https://grumqy.github.io/fangea/wiki/reone/">Reone</a>, Liwonia </td></tr><tr><th>Państwo</th><td> <img src="https://i.ibb.co/Fhvtg3R/montecydja-flaga.png" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/montecydia/">Montecydia</a></td></tr><tr><th>Kanton</th><td> <img src="https://i.ibb.co/NF6fxZW/lutenbergia-padbuckerlitz.png" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/lutenberg-paddbuckenby/">Lutenberg-Paddbuckenby</a></td></tr><tr><th>Siedziba</th><td> <a href="https://grumqy.github.io/fangea/wiki/paddbucken/">Paddbucken </a></td></tr><tr><th>Udziałowcy</th><td> <a href="https://grumqy.github.io/fangea/wiki/kürzer/">Kürzer</a> </td></tr><tr><th>Data założenia</th><td> 27 sierpnia 1968</td></tr><tr><th>Liczba pracowników</th><td> 125.000 (2024)</td></tr><tr><th>Prezes</th><td> <a href="https://grumqy.github.io/fangea/wiki/kristoffer_ekbom/">Kristoffer Ekbom</a></td></tr></tbody></table>
 
 <figure class="left"><img src="https://i.ibb.co/02YMKbC/cartlandold.png" alt="Logo Cartland używane do 2018 roku"><figcaption>Logo Cartland używane do 2018 roku</figcaption></figure>
 <figure class="left"><img src="https://i.ibb.co/rF1pf2p/vagn.png" alt="Logo Vagnland używane do 1976 roku"><figcaption>Logo Vagnland używane do 1976 roku</figcaption></figure>
@@ -67,9 +67,9 @@
 = Historia i Działalność =
 
 {|infobox Cartland
-|c=2 [[timg:https://i.ibb.co/pbvn9zb/cartland-new.png|Logo]] |
-|{ibox
-}|
+|t=cc=2 [[timg:https://i.ibb.co/pbvn9zb/cartland-new.png|Logo]] |
+|c=2 [[timg:https://i.ibb.co/8gQm4pJ/Zrzut-ekranu-2025-01-02-110518.png|Sklep sieci Cartland w Reone]] |
+|t=cc=2 Sklep sieci Cartland w (https://grumqy.github.io/fangea/wiki/reone/)[Reone], Liwonia |
 ! Państwo!| [[icon:https://i.ibb.co/Fhvtg3R/montecydja-flaga.png|small]] (https://grumqy.github.io/fangea/wiki/montecydia/)[Montecydia]|
 ! Kanton!| [[icon:https://i.ibb.co/NF6fxZW/lutenbergia-padbuckerlitz.png|small]] (https://grumqy.github.io/fangea/wiki/lutenberg-paddbuckenby/)[Lutenberg-Paddbuckenby]|
 ! Siedziba!| (https://grumqy.github.io/fangea/wiki/paddbucken/)[Paddbucken ]|
