--- a/index.html
+++ b/index.html
@@ -145,14 +145,14 @@
                 <div class="article-tile-description">Pamercja</div>
             </div>
         </a>
-        <a href="https://grumqy.github.io/fangea/wiki/nowy_tuhalf/">
+        <a href="https://grumqy.github.io/fangea/wiki/cartland/">
             <div class="article-tile">
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
                 <div class="article-tile-image">
-                    <img src="https://i.ibb.co/KzT7Pb9/KNT.webp">
-                    <div class="article-tile-text"><span>Nowy Tuhalf, Księstwo Nowego Tuhalfu (słoweń. Novi Tuhalf, Kneževina novega Tuhalfa).</span></div>
+                    <img src="https://i.ibb.co/8gQm4pJ/Zrzut-ekranu-2025-01-02-110518.png">
+                    <div class="article-tile-text"><span>Cartland to firma zajmująca się sprzedażą detaliczną żywności z siedzibą w Paddbucken. Przedsiębiorstwo prowadzi 1157 placówek i działa w dwudziestu różnych krajach. Cartland jest pełnozakresowym detalistą spożywczym i funkcjonuje jako spółka niezależna.</span></div>
                 </div>
-                <div class="article-tile-description">Nowy Tuhalf</div>
+                <div class="article-tile-description">Cartland</div>
             </div>
         </a>
         <a href="https://grumqy.github.io/fangea/wiki/powstanie_ekwalijskie/">
