--- a/index.html
+++ b/index.html
@@ -145,14 +145,14 @@
                 <div class="article-tile-description">Pamercja</div>
             </div>
         </a>
-        <a href="https://grumqy.github.io/fangea/wiki/cartland/">
+        <a href="https://grumqy.github.io/fangea/wiki/nowy_tuhalf/">
             <div class="article-tile">
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
                 <div class="article-tile-image">
-                    <img src="https://i.ibb.co/8gQm4pJ/Zrzut-ekranu-2025-01-02-110518.png">
-                    <div class="article-tile-text"><span>Cartland to firma zajmująca się sprzedażą detaliczną żywności z siedzibą w Paddbucken. Przedsiębiorstwo prowadzi 1157 placówek i działa w dwudziestu różnych krajach. Cartland jest pełnozakresowym detalistą spożywczym i funkcjonuje jako spółka niezależna.</span></div>
+                    <img src="https://i.ibb.co/Q6hz0Hx/KNT.png">
+                    <div class="article-tile-text"><span>Nowy Tuhalf, Księstwo Nowego Tuhalfu (słoweń. Novi Tuhalf, Kneževina novega Tuhalfa).</span></div>
                 </div>
-                <div class="article-tile-description">Cartland</div>
+                <div class="article-tile-description">Nowy Tuhalf</div>
             </div>
         </a>
         <a href="https://grumqy.github.io/fangea/wiki/powstanie_ekwalijskie/">
@@ -227,6 +227,16 @@
                 <div class="article-tile-description">Martylia</div>
             </div>
         </a>
+        <a href="https://grumqy.github.io/fangea/wiki/cartland/">
+            <div class="article-tile">
+                <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
+                <div class="article-tile-image">
+                    <img src="https://i.ibb.co/8gQm4pJ/Zrzut-ekranu-2025-01-02-110518.png">
+                    <div class="article-tile-text"><span>Cartland to firma zajmująca się sprzedażą detaliczną żywności z siedzibą w Paddbucken. Przedsiębiorstwo prowadzi 1157 placówek i działa w dwudziestu różnych krajach. Cartland jest pełnozakresowym detalistą spożywczym i funkcjonuje jako spółka niezależna.</span></div>
+                </div>
+                <div class="article-tile-description">Cartland</div>
+            </div>
+        </a>
         <a href="https://grumqy.github.io/fangea/wiki/epsilon_3.1/">
             <div class="article-tile">
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
@@ -235,16 +245,6 @@
                     <img src="https://i.ibb.co/719v0HN/hwb.png">
                 </div>
                 <div class="article-tile-description">Epsilon 3.1</div>
-            </div>
-        </a>
-        <a href="https://grumqy.github.io/fangea/wiki/richteryzm/">
-            <div class="article-tile">
-                <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
-                <div class="article-tile-image">
-                    <div class="article-tile-text"><span>Zbiór poglądów politycznych będący połączeniem skrajnego liberalizmu w gospodarce i tradycjonalizmu w kwestiach społeczno-obyczajowych i politycznych, a także ustrojowych. Jest on powszechnie uważany za konserwatywną odmianę anarchokapitalizmu. Richteryści opowiadają się za wprowadzeniem monarchii oraz zniesieniem demokracji.</span></div>
-                    <img src="https://i.ibb.co/QFdcFZb/obraz-2024-06-01-211200049.png">
-                </div>
-                <div class="article-tile-description">Richteryzm</div>
             </div>
         </a>
         <div style="pointer-events: none; width: 110%; height: 100%; position: absolute; bottom: 0; left: 0; background-image: linear-gradient(to top, #101920 5%, transparent 80%); z-index: 100;"></div>
