--- a/wiki/taj-hoi/index.html
+++ b/wiki/taj-hoi/index.html
@@ -30,16 +30,16 @@
 <article>
 <header><div>Taj-Hoi</div><span>02.01.2025</span></header>
 <div class="uncomplete"></div>
-<table class="infobox"><caption>Cesarstwo Taj-Hoi</caption><tbody><tr><th style="text-align: center;" colspan="2"> <i>Đế quốc Tài-Hội</i></th></tr><tr><td colspan="2"><table class="ibox"><tbody><tr><td><img src="https://i.ibb.co/GH1ttWY/taj-hoi.png" data-description="Flaga Taj-Hoi"></td><td><img src="https://i.ibb.co/WfypCx5/taj-hoi-godlo.png" data-description="Godło Taj-Hoi"> </td></tr><tr><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/flaga_taj-hoi/">Flaga</a></td><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/herb_taj-hoi/">Herb</a> </td></tr></tbody></table></td></tr><tr><td style="text-align: center;" colspan="2"> Hymn: <a href="https://grumqy.github.io/fangea/wiki/hymn_teranu/"><i>Đại Vương</i></a><br>(<i>Wielki Vương</i>) </td></tr><tr><td style="text-align: center;" colspan="2"> <audio controls=""><source src="https://audio.jukehost.co.uk/AXUXfdfmEfUL7i4RsxvYFhOcJOK5Nxaq" type="audio/mpeg"></audio> </td></tr></tbody></table>
+<table class="infobox"><caption>Cesarstwo Taj-Hoi</caption><tbody><tr><th style="text-align: center;" colspan="2"> <i>Đế quốc Tài-Hội</i></th></tr><tr><td colspan="2"><table class="ibox"><tbody><tr><td><img src="https://i.ibb.co/GH1ttWY/taj-hoi.png" data-description="Flaga Taj-Hoi"></td><td><img src="https://i.ibb.co/WfypCx5/taj-hoi-godlo.png" data-description="Herb Taj-Hoi"> </td></tr><tr><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/flaga_taj-hoi/">Flaga</a></td><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/herb_taj-hoi/">Herb</a> </td></tr></tbody></table></td></tr><tr><td style="text-align: center;" colspan="2"> Hymn: <a href="https://grumqy.github.io/fangea/wiki/hymn_taj-hoi/"><i>Đại Vương</i></a><br>(<i>Wielki Vương</i>) </td></tr><tr><td style="text-align: center;" colspan="2"> <audio controls=""><source src="https://audio.jukehost.co.uk/AXUXfdfmEfUL7i4RsxvYFhOcJOK5Nxaq" type="audio/mpeg"></audio> </td></tr></tbody></table>
 
 <p><b>Taj-Hoi</b>, <b>Cesarstwo Taj-Hoi</b> (wiet. <i>Tài-Hội</i>, Đế quốc Tài-Hội).</p>
  <div id="source-code" style="display:none;">{|infobox Cesarstwo Taj-Hoi
 !t=cc=2 ''Đế quốc Tài-Hội'' !
 |{ibox
-|[[timg:https://i.ibb.co/GH1ttWY/taj-hoi.png|Flaga Taj-Hoi]] || [[timg:https://i.ibb.co/WfypCx5/taj-hoi-godlo.png|Godło Taj-Hoi]] |
+|[[timg:https://i.ibb.co/GH1ttWY/taj-hoi.png|Flaga Taj-Hoi]] || [[timg:https://i.ibb.co/WfypCx5/taj-hoi-godlo.png|Herb Taj-Hoi]] |
 |t=c (https://grumqy.github.io/fangea/wiki/flaga_taj-hoi/)[Flaga] ||t=c (https://grumqy.github.io/fangea/wiki/herb_taj-hoi/)[Herb] |
 }|
-|t=cc=2 Hymn: (https://grumqy.github.io/fangea/wiki/hymn_teranu/)[''Đại Vương'']<br>(''Wielki Vương'') |
+|t=cc=2 Hymn: (https://grumqy.github.io/fangea/wiki/hymn_taj-hoi/)[''Đại Vương'']<br>(''Wielki Vương'') |
 |t=cc=2 <audio controls=""><source src="https://audio.jukehost.co.uk/AXUXfdfmEfUL7i4RsxvYFhOcJOK5Nxaq" type="audio/mpeg"></audio> |
 |}
 
