--- a/wiki/index.html
+++ b/wiki/index.html
@@ -72,6 +72,7 @@
                 <li><a href="https://grumqy.github.io/fangea/wiki/greenpay/">Greenpay</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/shot_paste/">Shot Paste</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/mmt_transport/">MMT Transport</a></li>
+                <li><a href="https://grumqy.github.io/fangea/wiki/kürzer/">Kürzer</a></li>
             </ul> 
             <ul class="article-category">
                 <h1>Konflikty Zbrojne</h1>
