--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
                 <div class="article-tile-description">Hierarchia dróg</div>
             </div>
         </a>
-        <a href="https://grumqy.github.io/fangea/wiki/pameryjskie_tablice_rejestracyjne/">
+        <a href="https://grumqy.github.io/fangea/wiki/kürzer/">
             <div class="article-tile">
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
                 <div class="article-tile-image">
-                    <img src="https://i.ibb.co/zRsJZ4w/powiaty-kody-gotowe.png">
-                    <div class="article-tile-text"><span>Pameryjskie tablice rejestracyjne – tablice rejestracyjne używane w Pamercji. Jedna, dwie lub trzy pierwsze litery tworzą wyróżnik miejsca. Pierwsza litera oznacza województwo. Jedna lub dwie następne – powiat albo miasto na prawach powiatu. Po wyróżniku powiatu (a w przypadku tablic samochodowych zmniejszonych – województwa) następuje wyróżnik pojazdu. Nie można w nim jednak stosować liter B, D, I, O, Z, zbyt podobnych do cyfr 8, 0, 1, 0, 2. Numery są zapisywane krojem pisma Arklatrs.</span></div>
+                    <img src="https://i.ibb.co/SmGx5gc/kurzerpregola.png">
+                    <div class="article-tile-text"><span>Kürzer – założona w 2005 roku przez Josepha von Kuele iznotiańska sieć sklepów dyskont, należąca do sieci sklepów Cartland. Po upływie 9 lat od rozpoczęcia działalności 740 sklepów Kürzer funkcjonowało w Iznotii jako lokalni dystrybutorzy. Pod koniec 2016 roku Kürzer rozpoczął działalność zagraniczną. W latach 2016 oraz 2017 Kürzer pojawił w Najbielańsku oraz Lemburgu. W 2022 r. dysponował ponad 3,2 tys. sklepów w 5 krajach.</span></div>
                 </div>
-                <div class="article-tile-description">Pameryjskie tablice rejestracyjne</div>
+                <div class="article-tile-description">Kürzer</div>
             </div>
         </a>
             <a href="https://grumqy.github.io/fangea/wiki/montecydia/">
@@ -125,14 +125,14 @@
                 <div class="article-tile-description">Liwonia</div>
             </div>
         </a>
-        <a href="https://grumqy.github.io/fangea/wiki/shot_paste/">
+        <a href="https://grumqy.github.io/fangea/wiki/pameryjskie_tablice_rejestracyjne/">
             <div class="article-tile">
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
                 <div class="article-tile-image">
-                    <div class="article-tile-text"><span>Shot Paste (właściwie Craig Response LLC.) – sudfangejskie przedsiębiorstwo chemiczne z siedzibą w Palm Beach w stanie Olympia, założone w 2009 roku. W 2016 roku firma zatrudniała około 120 osób. Założycielem i obecnym prezesem firmy jest Franklin Craig. Firma stała się popularnym memem internetowym ze względu na swoje niecodzienne reklamy, w których występuje sam jej założyciel prezentując swoje produkty w nietypowych sytuacjach (np. zbudowanie łodzi z pasty Shot Paste).</span></div>
-                    <img src="https://i.ibb.co/x23Pzg1/sp.png">
+                    <img src="https://i.ibb.co/zRsJZ4w/powiaty-kody-gotowe.png">
+                    <div class="article-tile-text"><span>Pameryjskie tablice rejestracyjne – tablice rejestracyjne używane w Pamercji. Jedna, dwie lub trzy pierwsze litery tworzą wyróżnik miejsca. Pierwsza litera oznacza województwo. Jedna lub dwie następne – powiat albo miasto na prawach powiatu. Po wyróżniku powiatu (a w przypadku tablic samochodowych zmniejszonych – województwa) następuje wyróżnik pojazdu. Nie można w nim jednak stosować liter B, D, I, O, Z, zbyt podobnych do cyfr 8, 0, 1, 0, 2. Numery są zapisywane krojem pisma Arklatrs.</span></div>
                 </div>
-                <div class="article-tile-description">Shot Paste</div>
+                <div class="article-tile-description">Pameryjskie tablice rejestracyjne</div>
             </div>
         </a>
         <a href="https://grumqy.github.io/fangea/wiki/pamercja/">
